# elfkit

./: CMakeLists.txt  go.mod
doc/: ElfFile.md  ElfFile_cn.md  ElfFile_en.md
example/: example.cc  main.cc
go/: Makefile  sample.go
go/elfkit/: elfkit.cc  elfkit.go  elfkit.h  elfkit_types.go  types.go
inc/: elf.h
inc/linux/: types.h
src/: elf.h  elf_common.cc  elf_common.h  elf_func_array.h  elf_hash_tab.cc  elf_hash_tab.h  elf_image.cc  elf_image.h  elf_image32.cc  elf_image32.h  elf_image64.cc  elf_image64.h  elf_log.h  elf_mapped.cc  elf_mapped.h  elf_reader.cc  elf_reader.h  elf_reloc.cc  elf_reloc.h  elf_reloc_tab.h  elf_section.cc  elf_section.h  elf_segment.cc  elf_segment.h  elf_string_tab.h  elf_symbol.cc  elf_symbol.h  elf_symbol_tab.h  elfkit.h  main.cc  string_list.h
src/common/: elf.h  elf_common.cc  elf_common.h  elf_log.h  elf_mapped.cc  elf_string_list.h
src/file/: elf_reader.cc  elf_reader.h
src/image/: elf_image.cc  elf_image.h  elf_image32.cc  elf_image32.h  elf_image64.cc  elf_image64.h
src/model/: elf_func_array.h  elf_gnu_hash_tab.cc  elf_gnu_hash_tab.h  elf_hash_tab.cc  elf_hash_tab.h  elf_reloc_tab.cc  elf_reloc_tab.h  elf_string_tab.cc  elf_string_tab.h  elf_symbol_tab.cc  elf_symbol_tab.h  elf_sysv_hash_tab.cc  elf_sysv_hash_tab.h  elf_type.cc  elf_type.h
src/reader/: elf_reader.cc  elf_reader.h
src/types/: elf.h
test/: CMakeLists.txt  test_hashtab.cc  test_types.cc
